Fix pre element wrapping

--- a/src/styles/blog/_page.scss
+++ b/src/styles/blog/_page.scss
@@ -30,6 +30,7 @@
   & > :first-child {
     flex-basis: 500px;
     flex-grow: 1;
+    max-inline-size: 100vi;
   }
 
   & > :nth-child(2) {
